--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>YAYA Wood & Metal Arts Enterprise</title>
+  <link rel="icon" type="image/png" href="images/logo.png">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-pZt1k8wA6qR8NvqfQb4DKi1i7Y4+Af7aBsyWkKpRXnFZtSwxG3oOIHr+7Jm8pGfH5DqffkMeh4P6+r5K3H1+6Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <style>
+    html { scroll-behavior: smooth; }
+  </style>
+</head>
+<body class="bg-gray-50 text-gray-900">
 
-  
   <!-- Navbar -->
   <header class="fixed top-0 w-full bg-white shadow-md z-50">
   <div class="container mx-auto flex justify-between items-center p-4">
@@ -12,7 +23,14 @@
         <!-- Logo image -->
         <img src="images/logo.png" alt="YAYA Wood & Metal Arts Logo" class="h-10 md:h-12 w-auto">
         <!-- Company name -->
-        <span class="text-lg md:text-2xl font-bold text-green-700">ያያ የእንጨትና ብረታብረት ሥራ ድርጅት</span>
+       <div class="text-center">
+  <span class="block text-lg md:text-2xl font-bold text-red-600">
+    ያያ የእንጨትና ብረታብረት ሥራ ድርጅት
+  </span>
+  <span class="block text-sm md:text-base font-semibold text-green-600">
+    YAYA Wood & Metal Arts Enterprise
+  </span>
+</div>
       </a>
     </h1>
 
@@ -55,9 +73,9 @@
 <script>
   // Add your local image paths here
   const heroImages = [
-    "images/image1.png",
-    "images/image2.png",
-    "images/image3.png"
+    "images/hero.jpg",
+    "images/hero2.jpg",
+    //"images/image3.png"
   ];
 
   const heroSection = document.getElementById('home');
@@ -129,24 +147,24 @@
     </div>
   </section>
 
-  <!-- Gallery Section -->
+ <!-- Gallery Section -->
 <section id="gallery" class="py-16 bg-gray-100">
   <div class="container mx-auto px-4 text-center">
     <h3 class="text-3xl md:text-4xl font-extrabold text-green-700 mb-12 border-b-4 border-green-500 inline-block pb-2">
       Gallery
     </h3>
 
-    <div class="relative max-w-5xl mx-auto overflow-hidden rounded-3xl shadow-xl bg-white">
+    <div class="relative max-w-6xl mx-auto overflow-hidden rounded-3xl shadow-xl bg-white">
       <!-- Slides Container -->
       <div class="flex transition-transform duration-700 ease-in-out gallery-slides">
-        <img src="images/furniture.png" alt="Furniture" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/door.png" alt="Door" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/bed.jpg" alt="Bed" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/wood.jpg" alt="Wood Artwork" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/1.jpg" alt="Furniture" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/2.jpg" alt="Door" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/3.jpg" alt="Bed" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
-        <img src="images/4.jpg" alt="Wood Artwork" class="w-full flex-shrink-0 object-cover h-80 hover:scale-105 transition-transform duration-500">
+        <img src="images/furniture.png" alt="Furniture" class="gallery-image">
+        <img src="images/door.png" alt="Door" class="gallery-image">
+        <img src="images/bed.jpg" alt="Bed" class="gallery-image">
+        <img src="images/wood.jpg" alt="Wood Artwork" class="gallery-image">
+        <img src="images/1.jpg" alt="Furniture" class="gallery-image">
+        <img src="images/2.jpg" alt="Door" class="gallery-image">
+        <img src="images/3.jpg" alt="Bed" class="gallery-image">
+        <img src="images/4.jpg" alt="Wood Artwork" class="gallery-image">
       </div>
 
       <!-- Navigation Arrows -->
@@ -159,6 +177,25 @@
     </div>
   </div>
 </section>
+
+<!-- Extra CSS to fix gallery image display -->
+<style>
+  .gallery-image {
+    width: 100%;
+    height: 500px;              /* Adjust the gallery height */
+    object-fit: cover;          /* Ensures the image fills the area without stretching */
+    flex-shrink: 0;
+    transition: transform 0.5s ease;
+  }
+  .gallery-image:hover {
+    transform: scale(1.05);
+  }
+  @media (max-width: 768px) {
+    .gallery-image {
+      height: 300px;            /* Smaller height on mobile */
+    }
+  }
+</style>
 
 <script>
   const slides = document.querySelector('.gallery-slides');
@@ -215,7 +252,7 @@
         </div>
         <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-xl transition">
           <img src="images/kitchen.jpg" alt="Kitchen" class="rounded-lg mb-4 w-full object-cover" />
-          <h4 class="font-bold text-lg md:text-xl">Kitchen Cabinets</h4>
+          <h4 class="font-bold text-lg md:text-xl">Closets</h4>
         </div>
         <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-xl transition">
           <img src="images/ward.jpg" alt="Wardrobes" class="rounded-lg mb-4 w-full object-cover" />
@@ -230,6 +267,18 @@
           <h4 class="font-bold text-lg md:text-xl">Metal Works</h4>
         </div>
         <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-xl transition">
+          <img src="images/irondoor.png" alt="decor" class="rounded-lg mb-4 w-full object-cover" />
+          <h4 class="font-bold text-lg md:text-xl">Metal doors</h4>
+        </div>
+        <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-xl transition">
+          <img src="images/window.png" alt="decor" class="rounded-lg mb-4 w-full object-cover" />
+          <h4 class="font-bold text-lg md:text-xl">metal Window</h4>
+        </div>
+        <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-xl transition">
+          <img src="images/framed doors.jpg" alt="decor" class="rounded-lg mb-4 w-full object-cover" />
+          <h4 class="font-bold text-lg md:text-xl">Framed doors</h4>
+        </div>
+        <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-xl transition">
           <img src="images/decor.jpg" alt="decor" class="rounded-lg mb-4 w-full object-cover" />
           <h4 class="font-bold text-lg md:text-xl">Decor Items</h4>
         </div>
@@ -237,7 +286,12 @@
     </div>
   </section>
 
-  <!-- Contact Us -->
+  <!-- ✨ Compact Section Separator -->
+<div class="flex items-center justify-center my-12">
+  <div class="w-32 h-[3px] bg-gradient-to-r from-green-600 to-green-400 rounded-full"></div>
+</div>
+
+<!-- Contact Us -->
 <section id="contact" class="py-20 bg-gradient-to-b from-gray-100 to-white">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 px-6">
 
@@ -271,6 +325,27 @@
           </a>
         </p>
       </div>
+
+      <!-- 🌐 Social Media Icons -->
+      <div class="flex justify-center md:justify-start gap-5 mt-8 text-3xl">
+        <!-- Facebook -->
+        <a href="https://web.facebook.com/lukas.getahun" target="_blank" class="text-blue-600 hover:scale-110 transition-transform">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <!-- Telegram -->
+        <a href="https://t.me/" target="_blank" class="text-sky-500 hover:scale-110 transition-transform">
+          <i class="fab fa-telegram-plane"></i>
+        </a>
+        <!-- WhatsApp -->
+  <a href="https://wa.me/251926231166" target="_blank" class="text-green-500 hover:scale-110 transition-transform">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+
+  <!-- IMO -->
+  <a href="https://imo.im/imoid_aMjN5lL4yt" target="_blank" class="hover:scale-110 transition-transform">
+    <i class="fab fa-imo"></i>
+  </a>
+      </div>
     </div>
 
     <!-- Right: Contact Form -->
@@ -289,10 +364,27 @@
   </div>
 </section>
 
-  <!-- Footer -->
-  <footer class="bg-green-700 text-white text-center p-4">
+<!-- ✅ Font Awesome 6 CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
+
+
+<!-- Footer -->
+<footer class="bg-green-700 text-white text-center p-4">
+  <div class="container mx-auto">
+  
     <p>&copy; 2025 YAYA Wood & Metal Arts Enterprise. All Rights Reserved.</p>
-  </footer>
+
+    <div class="flex justify-center items-center space-x-2 text-sm font-medium mt-2">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+              d="M16 12H8m8-4H8m8 8H8m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+      </svg>
+     <span class="text-yellow-400 hover:text-yellow-300 transition-colors duration-300 font-semibold drop-shadow-[0_0_6px_rgba(255,215,0,0.8)]">
+        Developed by <span class="font-semibold text-white">Dello Technology</span> +251 916 171 812
+      </span>
+    </div>
+  </div>
+</footer>
 
   <!-- JS -->
   <script>
@@ -326,5 +418,3 @@
   </script>
 </body>
 </html>
-
-
